0.48 - added handling for oracle errors ora-01033, ora-02067 and ora-04068

0.47 - fixed bug that caused sqlr-export to output negative xml-entity values
	fixed single-quote-escaping in sqlr-export
	forced handoff="reconnect" for Cygwin and Linux<2.2
	updated all command line programs to use the same command line
		argument structure
	added a "fields" command to sqlrsh
	added a -command argument to sqlrsh so commands and queries can be
		run from the command line directly
	renamed query and fields to sqlr-query and sqlr-fields
	improved readline detection in the configure script
	added getDatabase/Table/ColumnList support to odbc and mdbtools
		connections
	added detection and support for openjdk
	integrated patches from Neowiz for:
		using -g3 if available when --enable-debug is specified
		support for using the oracle statement cache
		fixing an oracle column-resource-related memory leak
		eliminating sqlr-start delay
		"using namespace rudiments" declaration fixes
	added a faq entry about common OCIEnvCreate errors
	removed default id warning from sqlr-cachemanager
	removed coloration from sqlrsh
	updated begin, commit and rollback to return errors if they fail
	updated firebird docs
	added parsing of standalone constraints in a create table query

0.46 - refactored the translation framework to mimic the trigger framework
	added make.batch file for building on windows
	added C# API and ADO.NET adapter
	added begin method to API's
	added sqlrelay.xsd
	added date binds
	applied Georgiy Kirichenko's missing flushWriteBuffer() patch
	fixed some subtle bugs in the Ruby DBI module that modern versions of
		Ruby DBI reveal
	fixed sql parser errors involving "not null" and union clauses
	added a translation to replace double-quoted string literals with
		single-quoted string literals
	fixed a sql parser bug where "group" of a group by clause could be
		misinterpreted as a table alias
	updated the scaler to poll 10 times per second and also accept a